RESOLVED FIXED321315
Stop including <objc/objc-runtime.h> and forbid it via check-webkit-style
https://bugs.webkit.org/show_bug.cgi?id=321315
Summary Stop including <objc/objc-runtime.h> and forbid it via check-webkit-style
David Kilzer (:ddkilzer)
Reported 2026-08-07 12:37:14 PDT
WebKit fails to compile against the iOS 27 public SDK because the legacy umbrella header `<objc/objc-runtime.h>` is not present in that SDK. `Source/JavaScriptCore/API/JSWrapperMap.h` imports `<objc/objc-runtime.h>` and fails like this when using the iOS 27 public SDK: ``` Source/JavaScriptCore/API/JSWrapperMap.h:28:9: error: 'objc/objc-runtime.h' file not found (in target 'libJavaScriptCore' from project 'JavaScriptCore') ** BUILD FAILED ** ``` Steps to reproduce: 1. Build WebKit against the iOS 27 public SDK (device or simulator). Expected result: WebKit compiles. Actual result: The build fails with the error above.
Attachments
David Kilzer (:ddkilzer)
Comment 1 2026-08-07 12:37:16 PDT
David Kilzer (:ddkilzer)
Comment 2 2026-08-07 13:02:05 PDT
EWS
Comment 3 2026-08-08 15:45:26 PDT
Committed 318848@main (75bb1892f1b4): <https://commits.webkit.org/318848@main> Reviewed commits have been landed. Closing PR #71173 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.