Stop including <objc/objc-runtime.h> and forbid it via check-webkit-style <https://bugs.webkit.org/show_bug.cgi?id=321315> <rdar://184350335>

Reviewed by Zak Ridouh and Yusuke Suzuki.

The legacy `<objc/objc-runtime.h>` umbrella header is not present in
the iOS 27 SDK (it remains in the macOS SDK), so every file that
imports it fails to compile against that SDK.

Import only the specific `<objc/...>` headers that each file uses
(`<objc/runtime.h>` and/or `<objc/message.h>` if needed), instead of
the umbrella.

Add an always-on `check-webkit-style` rule that flags any new `#include`
or `#import` of `<objc/objc-runtime.h>` and directs authors to the
individual headers, so the pattern is not reintroduced.

Covered by a new test in cpp_unittest.py.

* Source/JavaScriptCore/API/JSWrapperMap.h:
* Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionAVContentKeySession.mm:
* Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionAVFoundationObjC.mm:
* Source/WebCore/platform/ios/WebCoreMotionManager.mm:
* Source/WebKitLegacy/ios/Misc/WebGeolocationCoreLocationProvider.mm:
* Tools/Scripts/webkitpy/style/checkers/cpp.py:
(check_include_line):
* Tools/Scripts/webkitpy/style/checkers/cpp_unittest.py:
(CppStyleTestBase.perform_language_rules_check):
(OrderOfIncludesTest.test_check_objc_runtime_header_include): Add.

Canonical link: https://commits.webkit.org/318848@main