Source/JavaScriptCore/API/JSWrapperMap.h
@@ -25,7 +25,7 @@
 
 #import "JSValueInternal.h"
 #import <JavaScriptCore/JavaScriptCore.h>
-#import <objc/objc-runtime.h>
+#import <objc/runtime.h>
 
 #if JSC_OBJC_API_ENABLED
 
